feat: a lot of stuff ah commit